# vocald

./: .dockerignore  .gitignore  Dockerfile.headless  INSTALL.md  README.md  baseline.txt  docker-compose.headless.yml  env.example  pyproject.toml  verify-cli.sh  verify.sh
backend/: README.md  __init__.py  app.py  cli.py  models.py  pyproject.toml  requirements.txt
backend/backends/: __init__.py  base.py  fasterwhisper_backend.py  kokoro_backend.py  mlx_backend.py  qwen_llm_backend.py
backend/mcp_server/: README.md  __init__.py  server.py  tools.py
backend/routes/: __init__.py  generations.py  health.py  history.py  llm.py  profiles.py
backend/services/: history.py  profiles.py
backend/utils/: cache.py
examples/podcast-skill/: SKILL.md
examples/podcast-skill/scripts/: say.sh
packaging/: vocald.rb
